Tests/bad/myBadTests/predefinedFunctionRedefinition copy.lat

void printInt(int x){
    return 2;
}

int main(){
    f();
    return 0;
}